# agno_rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.py  test_rag.py
docs/: setup_pgvector.py
utils/: __init__.py  embeding_utils.py  ollama_utils.py  pdf_utils.py  pg_database_utils.py
