[project]
name = "bismillah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.8",
    "anthropic>=0.71.0",
    "fastapi[standard]>=0.119.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "mcp>=1.18.0",
    "pathlib>=1.0.1",
    "psycopg2>=2.9.11",
    "pypdf>=6.1.2",
    "sqlalchemy>=2.0.44",
]
